@@ -24,6 +24,9 @@
 2007-07-03  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> tiff: Update to libtiff version 3.8.2.
+  <LI> magick/error.h (ThrowReaderException): Don't overwrite an
+        exception which was already thrown.
   <LI> magick/utility.c (MagickStrlCat): Replacement function for strlcat().
         (MagickStrlCpy): Replacement function for strlcpy();
 
